--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html-to-pptxgenjs-parser",
   "version": "0.0.41",
   "description": "Fork from https://github.com/it-beyondit/html2pptxgenjs to Convert HTML into PptxGenJS text",
-  "main": "dist/html2pptxgenjs.cjs.js",
+  "main": "dist/html-to-pptxgenjs-parser.cjs.js",
   "scripts": {
     "build": "rollup --config rollup.config.js"
   },
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "css": "^2.2.4",
+    "html-to-pptxgenjs-parser": "^0.0.42",
     "htmlparser2": "^4.1.0",
     "parse-color": "^1.0.0"
   },
